--- a/css_simple_loader/style.css
+++ b/css_simple_loader/style.css
@@ -20,9 +20,16 @@ body {
     border-left: 10px solid lightgray;
     border-radius: 50%;
     animation: load 2s linear infinite;
+    padding: 4px;
 }
+
 @keyframes load {
-    0%{transform: rotate(0deg)}
-    100%{transform: rotate(360deg)}
-    
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
+
 }
