--- a/simple_nav_btn/style.css
+++ b/simple_nav_btn/style.css
@@ -13,7 +13,7 @@ body {
 
 }
 
-a.btn {
+a.simple-nav-btn {
     display: inline-block;
     text-align: center;
     position: relative;
@@ -25,7 +25,7 @@ a.btn {
 
 }
 
-a.btn::after {
+a.simple-nav-btn::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -40,7 +40,7 @@ a.btn::after {
 
 }
 
-a.btn:hover::after {
+a.simple-nav-btn:hover::after {
     transform-origin: left;
     transform: scale(1);
 }
