--- a/card-flip/style.css
+++ b/card-flip/style.css
@@ -12,10 +12,7 @@ body {
     align-items: center;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-}
+
 
 .container {
     position: relative;
@@ -26,7 +23,7 @@ a {
     border: 3px solid #555;
 }
 
-.card {
+.card-flip {
     height: 400px;
     width: 300px;
     position: absolute;
@@ -34,7 +31,7 @@ a {
     transition: 0.5s;
 }
 
-.card-front {
+.card-flip .card-front {
     height: 100%;
     width: 100%;
     background-image: url("https://images.unsplash.com/photo-1607007745622-c1cd43b0d59d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80");
@@ -46,7 +43,7 @@ a {
     transition: 0.5s;
 }
 
-.card-back {
+.card-flip .card-back {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -61,35 +58,37 @@ a {
     align-items: center;
 }
 
-.card:hover .card-front {
+.card-flip:hover .card-front {
     transform: rotateX(-180deg);
 }
 
-.card:hover .card-back {
+.card-flip:hover .card-back {
     transform: rotateX(0deg);
 }
 
-.card-back h2 {
+.card-flip .card-back h2 {
     background-color: whitesmoke;
     padding: 15px 20px;
     font-size: 32px;
 }
 
-.card-back h2 span {
+.card-flip .card-back h2 span {
     font-size: 20px;
 }
 
-.card-content {
+.card-back .card-content {
     text-align: justify;
     padding: 0 40px;
 }
 
-.card-icons {
+.card-back .card-icons {
     margin-bottom: 20px;
 }
 
-.card-icons a {
+.card-icons .icon {
     font-size: 24px;
     margin: 0 6px;
     transition: 0.5s;
+    text-decoration: none;
+    color: black;
 }
